flux/apps/immich/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: tensorchord/pgvecto-rs:pg17-v0.4.0
          args:
            - postgres
            - -c
            - shared_preload_libraries=vectors.so
            - -c
            - 'search_path="$$user", public, vectors'
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: pvc-postgres
