flux/apps/immich/service-immich-ml.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
spec:
  selector:
    app: immich-machine-learning
  type: ClusterIP
  ports:
    - port: 3301
      targetPort: 3301
